Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111618

Resize cursor used even if window is not resizable

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • 6.6.0
    • 6.4.2, 6.5.0 Beta3
    • None
    • WebAssembly
    • 4d0915234 (dev)

    Description

      This ticket is about WASM.
      One can check that with e.g. the dockwidgets example, by invoking the about dialog.

      Attachments

        For Gerrit Dashboard: QTBUG-111618
        # Subject Branch Project Status CR V

        Activity

          People

            piwierci Piotr Wierciński
            mikolaj.boc Mikołaj Boc (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes