Wasm: Hide resizing divs when the window is not resizable

Hide divs that are responsible for resizing the window and changing the
appearance of the cursor on this window if this window is not resizable.

Fixes: QTBUG-111618
Change-Id: I1948eaedf02fdd2a5289ae314521b3fd74ad7811
Reviewed-by: Mikołaj Boc <Mikolaj.Boc@qt.io>